--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+.filepond--drop-label {
+  color: #9ca7b9 !important;
+  background-color: #020207 !important;
+  border: 2px solid #9ca7b9 !important;
+  border-radius: 1em;
+}
+
+.filepond--credits {
+  display: none !important;
+}
